# rainbow_c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  bmp.h  colour.cpp  colour.h  main.cpp  pixel.h  point.h  rainbow_renderer.cpp  rainbow_renderer.h  thread_pool.cpp  thread_pool.h
